# my-learn-openGL

./: .gitignore  CMakeLists.txt  Makefile
include/learnopengl/: camera.h  shader_s.h
src/1.getting_started/1.1.hello_window/: hello_window.cpp
src/1.getting_started/2.1.triangle/: main.cpp
src/1.getting_started/2.2.triangle_indexed/: main.cpp
src/1.getting_started/2.3.triangle_exercise1/: main.cpp
src/1.getting_started/2.4.triangle_exercise2/: main.cpp
src/1.getting_started/2.5.triangle_exercise3/: main.cpp
src/1.getting_started/3.1.shader_uniform/: main.cpp
src/1.getting_started/3.2.shader_interpolation/: main.cpp
src/1.getting_started/3.3.shader_class/: main.cpp  shader.fs  shader.vs
src/1.getting_started/3.5.shader_exercise2/: main.cpp  shader.vs
src/1.getting_started/3.6.shader_exercise3/: main.cpp  shader.vs
src/1.getting_started/4.1.texture/: main.cpp
src/1.getting_started/4.2.texture_combined/: main.cpp
src/1.getting_started/4.4.texture_exercise2/: main.cpp  shader.fs
src/1.getting_started/4.5.texture_exercise3/: main.cpp
src/1.getting_started/4.6.texture_exercise4/: main.cpp  shader.vs
src/1.getting_started/5.1.transformations/: main.cpp
src/1.getting_started/5.2.transformations_exercise2/: main.cpp  shader.vs
src/1.getting_started/6.1.coordinate_systems/: main.cpp  shader.vs
src/1.getting_started/6.2.coordinate_systems_depth/: main.cpp
src/1.getting_started/6.3.coordinate_systems_multiple/: main.cpp
src/1.getting_started/7.1.camera_circle/: main.cpp
src/1.getting_started/7.2.camera_keyboard_dt/: main.cpp
src/1.getting_started/7.3.camera_mouse_zoom/: main.cpp  shader.fs
src/1.getting_started/7.4.camera_class/: main.cpp
src/2.lighting/1.color/: main.cpp  shader.fs  shader.vs
src/2.lighting/2.1.basic_lighting_diffuse/: main.cpp  shader.fs
src/2.lighting/2.2.basic_lighting_specular/: main.cpp
src/2.lighting/2.3.basic_lighting_exercise1/: main.cpp  shader.fs
src/2.lighting/3.1.materials/: light.fs  main.cpp  shader.fs  shader.vs
src/2.lighting/4.1.lighting_maps_diffuse_map/: main.cpp  shader.fs
src/2.lighting/4.2.lighting_maps_specular_map/: main.cpp  shader.fs
src/2.lighting/4.3.lighting_maps_exercise2/: main.cpp  shader.fs
src/2.lighting/4.4.lighting_maps_exercise4/: main.cpp  shader.fs
